[gd_scene load_steps=5 format=3 uid="uid://du0ivfuf4ixnq"]

[ext_resource type="Script" uid="uid://1tk7212r2xxa" path="res://world/resource/resource_gui.gd" id="1_kiumf"]
[ext_resource type="Texture2D" uid="uid://dfmxchwxe1jvu" path="res://Textures/UI/wood.png" id="2_pflm7"]
[ext_resource type="Texture2D" uid="uid://dd1mo8jc4rxip" path="res://Textures/UI/stone.png" id="3_2saku"]
[ext_resource type="Texture2D" uid="uid://cics8bnvo8mlp" path="res://Textures/UI/steel.png" id="4_m73cw"]

[node name="ResourceGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kiumf")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 51.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="WoodContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2

[node name="WoodResource" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/WoodContainer"]
layout_mode = 2
texture = ExtResource("2_pflm7")
expand_mode = 3

[node name="WoodValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/WoodContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 6
text = "0"

[node name="StoneContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2

[node name="StoneResource" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/StoneContainer"]
layout_mode = 2
texture = ExtResource("3_2saku")
expand_mode = 3

[node name="StoneValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/StoneContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 6
text = "0"

[node name="SteelContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2

[node name="SteelResource" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/SteelContainer"]
layout_mode = 2
texture = ExtResource("4_m73cw")
expand_mode = 3

[node name="SteelValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/SteelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 6
text = "0"
